--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "export-static-storybook": "build-storybook -c .storybook -o lerna-resource",
     "install": "lerna bootstrap --hoist",
     "build": "lerna exec --parallel -- babel src -d lib  --copy-files --config-file ../babel.config.js &&lerna exec --parallel -- rm -rf lib/*.stories.js",
-    "publish-packages": "lerna publish"
+    "publish-packages": "lerna publish from-packages"
   },
   "repository": {
     "type": "git",
@@ -40,6 +40,7 @@
     "@babel/preset-react": "^7.16.7",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
+    "@storybook/addon-docs": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-interactions": "^6.4.19",
     "@storybook/addon-links": "^6.4.19",
