--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "webpack-cli": "^4.9.2"
   },
   "lint-staged": {
-    "**/**/src/*.{js,jsx}": [
+    "**/**/src/**/*.{js,jsx}": [
       "prettier --write",
       "eslint"
     ]
