--- a/packages/Reference/package.json
+++ b/packages/Reference/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tdd/reference",
+  "name": "@tddc/reference",
   "version": "1.0.0",
   "description": "关联引用",
   "author": "周泽飞 <zefei.zhou@tongdun.net>",
