--- a/packages/Reference/package.json
+++ b/packages/Reference/package.json
@@ -12,5 +12,6 @@
     "antd": ">=3.20.1",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
-  }
+  },
+  "gitHead": "62664cb566b28e6302c422c25f2bd12d4189cb66"
 }
