--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "peerDependencies": {
     "antd": ">=3.20.1",
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react-dom": ">=16.8.0",
+    "tntd": ">=1.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
@@ -62,6 +63,7 @@
     "react-dom": "^16.8.6",
     "style-loader": "^1.3.0",
     "styled-components": "^5.3.3",
+    "universal-cookie": "^4.0.4",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.9.2"
   },
